tests/snapshots/assets__check_file@tests-assets-unit-markup-multi-tick-raw.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/multi-tick-raw.typ
---
`single tick`

``double backtick. Actually this is not raw text.``

```js
function fib(n) {
  if (n <= 1) return 1;
  return fib(n - 1) + fib(n - 2);
}
```

````md
# This is a markdown code block
```cpp
#include <iostream>
int main() {
  std::cout << "Hello, World!" << std::endl;
  return 0;
}
```
````
