tests/snapshots/assets__check_file@tests-assets-unit-math-2dmat.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/math/2dmat.typ
---
$
mat(
  1, 2, ..., 10;
  /* 1, 2, ..., 10; */
  2, 2, ..., 10;
  delim: "(",
  dots.v, dots.v, dots.down, dots.v;
  // 3, 3, ..., 10;
  10, 10, ..., 10;
)
$
