tests/snapshots/assets__check_file@tests-assets-unit-math-long.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/math/long.typ
---
$ aaaaaaaaaaaaaaaaaaaaa + bbbbbbbbbbbbbbbbbbbbbb + CCCCCCCCCCCCCCCCCCCCCCCCC $
$ [aaaaaaaaaaaaaaaaaaaaa + bbbbbbbbbbbbbbbbbbbbbb] + CCCCCCCCCCCCCCCCCCCCCCCCC $
