tests/snapshots/assets__check_file@tests-assets-unit-math-sqrt.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/math/sqrt.typ
---
$ √2345 $
$ ∜2345^3 $
