tests/snapshots/assets__check_file@tests-assets-unit-math-var-in-math.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/math/var-in-math.typ
---
#let f(content) = {
  if type(content) in (float, int) {
    content = $#content$
  }
}
